--- a/src/App.css
+++ b/src/App.css
@@ -52,6 +52,10 @@ h1{
 .todoBox{
   width: 750px;
 }
+.main{
+  position: relative;
+  height: 100vh;
+}
 
 @media only screen and (max-width: 770px) {
  .todoBox{
