--- a/src/CSS/Modal.css
+++ b/src/CSS/Modal.css
@@ -9,6 +9,7 @@
     top: 0;
     left: 0;
     position: absolute;
+    z-index: 3;
 }
 .color{
     position: absolute;
@@ -18,6 +19,7 @@
     opacity: 0.6;
     top: 0;
     right: 0;
+    z-index: 2;
 }
 .modals{
     height: 340px;
